@@ -6,7 +6,7 @@ import ch.uzh.ifi.hase.soprafs26.entity.Board;
 import ch.uzh.ifi.hase.soprafs26.entity.Edge;
 import ch.uzh.ifi.hase.soprafs26.entity.Intersection;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -22,30 +22,36 @@ public class BoardGenerationTest {
 
 		List<String> generatedTiles = board.generateBoard();
 
-		List<String> expectedTiles = Arrays.asList(
-				"SHEEP", "WHEAT", "WOOD",
-				"BRICK", "ORE", "SHEEP", "WHEAT",
-				"WOOD", "DESERT", "WOOD", "WHEAT", "BRICK",
-				"ORE", "WOOD", "ORE", "SHEEP",
-				"BRICK", "WHEAT", "SHEEP"
-		);
-
-		List<Integer> expectedDiceNumbers = Arrays.asList(
-				10, 2, 9,
-				12, 6, 4, 10,
-				9, -1, 11, 3, 8,
-				8, 3, 4, 5,
-				5, 6, 11
-		);
-
-		List<String> expectedPorts = Arrays.asList(
+		List<String> expectedPorts = List.of(
 				"STANDARD", "BRICK", "STONE", "WHEAT", "WOOD",
 				"STANDARD", "SHEEP", "STANDARD", "STANDARD"
 		);
 
-		assertEquals(expectedTiles, generatedTiles);
-		assertEquals(expectedTiles, board.getHexTiles());
-		assertEquals(expectedDiceNumbers, board.getHexTile_DiceNumbers());
+		assertEquals(19, generatedTiles.size());
+		assertEquals(19, board.getHexTile_DiceNumbers().size());
+		assertEquals(generatedTiles, board.getHexTiles());
+
+		assertEquals(1, Collections.frequency(generatedTiles, "DESERT"));
+		assertEquals(4, Collections.frequency(generatedTiles, "SHEEP"));
+		assertEquals(4, Collections.frequency(generatedTiles, "WHEAT"));
+		assertEquals(4, Collections.frequency(generatedTiles, "WOOD"));
+		assertEquals(3, Collections.frequency(generatedTiles, "BRICK"));
+		assertEquals(3, Collections.frequency(generatedTiles, "ORE"));
+
+		List<Integer> diceNumbers = board.getHexTile_DiceNumbers();
+		assertEquals(1, Collections.frequency(diceNumbers, -1));
+		assertEquals(1, Collections.frequency(diceNumbers, 2));
+		assertEquals(2, Collections.frequency(diceNumbers, 3));
+		assertEquals(2, Collections.frequency(diceNumbers, 4));
+		assertEquals(2, Collections.frequency(diceNumbers, 5));
+		assertEquals(2, Collections.frequency(diceNumbers, 6));
+		assertEquals(2, Collections.frequency(diceNumbers, 8));
+		assertEquals(2, Collections.frequency(diceNumbers, 9));
+		assertEquals(2, Collections.frequency(diceNumbers, 10));
+		assertEquals(2, Collections.frequency(diceNumbers, 11));
+		assertEquals(1, Collections.frequency(diceNumbers, 12));
+		assertEquals(0, Collections.frequency(diceNumbers, 7));
+
 		assertEquals(expectedPorts, board.getPorts());
 	}
 
@@ -97,6 +103,29 @@ public class BoardGenerationTest {
 	}
 
 	@Test
+	public void generateBoard_redNumbers_areNotAdjacent() {
+		Board board = new Board();
+		board.generateBoard();
+
+		for (int firstHexId = 1; firstHexId <= 19; firstHexId++) {
+			if (!isRedNumber(board.getHexTile_DiceNumbers().get(firstHexId - 1))) {
+				continue;
+			}
+
+			for (int secondHexId = firstHexId + 1; secondHexId <= 19; secondHexId++) {
+				if (!isRedNumber(board.getHexTile_DiceNumbers().get(secondHexId - 1))) {
+					continue;
+				}
+
+				assertFalse(
+					areAdjacentHexes(firstHexId, secondHexId),
+					"Red numbers must not be adjacent: " + firstHexId + " and " + secondHexId
+				);
+			}
+		}
+	}
+
+	@Test
 	public void generateBoard_intersections_haveStableIds() {
 		Board board = new Board();
 		board.generateBoard();
@@ -137,5 +166,44 @@ public class BoardGenerationTest {
 			assertNotNull(edge.getIntersectionAId());
 			assertNotNull(edge.getIntersectionBId());
 		}
+	}
+
+	private boolean isRedNumber(int diceNumber) {
+		return diceNumber == 6 || diceNumber == 8;
+	}
+
+	private boolean areAdjacentHexes(int firstHexId, int secondHexId) {
+		double[] firstCoordinates = boardCoordinatesForHex(firstHexId);
+		double[] secondCoordinates = boardCoordinatesForHex(secondHexId);
+
+		double deltaX = Math.abs(firstCoordinates[0] - secondCoordinates[0]);
+		double deltaY = Math.abs(firstCoordinates[1] - secondCoordinates[1]);
+
+		return (deltaX == 1.0 && deltaY == 0.0) || (deltaX == 0.5 && deltaY == 1.0);
+	}
+
+	private double[] boardCoordinatesForHex(int hexId) {
+		return switch (hexId) {
+			case 1 -> new double[] {1, 0};
+			case 2 -> new double[] {2, 0};
+			case 3 -> new double[] {3, 0};
+			case 4 -> new double[] {0.5, 1};
+			case 5 -> new double[] {1.5, 1};
+			case 6 -> new double[] {2.5, 1};
+			case 7 -> new double[] {3.5, 1};
+			case 8 -> new double[] {0, 2};
+			case 9 -> new double[] {1, 2};
+			case 10 -> new double[] {2, 2};
+			case 11 -> new double[] {3, 2};
+			case 12 -> new double[] {4, 2};
+			case 13 -> new double[] {0.5, 3};
+			case 14 -> new double[] {1.5, 3};
+			case 15 -> new double[] {2.5, 3};
+			case 16 -> new double[] {3.5, 3};
+			case 17 -> new double[] {1, 4};
+			case 18 -> new double[] {2, 4};
+			case 19 -> new double[] {3, 4};
+			default -> throw new IllegalArgumentException("Unsupported hex id: " + hexId);
+		};
 	}
 }
